Changes for 2.2.6rc1

New features:
A.......S. [ZBX-8473] improved performance of deleting triggers by API and server - events will be deleted only by the housekeeper (Krists, Sasha)
A.F....... [ZBX-1357] updated Polish and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-7621] the discovered virtual machine disk and network items will now use device name instead of instance id in item name (wiper)
.......PS. [ZBX-8338] fixed SNMP walking code so that it intelligently chooses either a string or numeric representation for an OID index (asaveljevs)
..F....... [ZBX-8577] added wmi.get[] to the list of suggested items (asaveljevs)
..F....... [ZBX-8216] fixed screen import error (Andrejs)
A.F....... [ZBX-8510] fixed possible deadlocks when updating IT services (Pavels, Sasha)
...G...... [ZBX-8512] fixed processing of web.page.regexp without a newline character in the end of http GET response (Arturs)
A......... [ZBX-8424] fixed finding last event for triggers (Ivo)
.......PS. [ZBX-8424] changed range limit when looking up eventids to the upper bound of a 64bit integer (Juris)
A......... [ZBX-8493] fixed usergroup.massadd API call to not create duplicate entries in "rights" table (Krists)
..F....... [ZBX-8492] fixed maintenance periods without hosts/hostgroups to be accessible by both admins and superadmins (Krists)
A.F....... [ZBX-8428] fixed item.get API call to return values for "lastvalue", "lastclock", "lastns", "prevvalue" only for last 24 hours (Krists)
..F....... [ZBX-8371] fixed issue when maintenance items with their hosts/host groups removed are not accessible in configuration (Krists)
..F....... [ZBX-8366] fixed table header display in Monitoring -> Overview for IE11 (Andrejs)

--------------------------------------------------------------------------------
Changes for 2.2.5

2.2.5rc1 was released as 2.2.5 without any changes

--------------------------------------------------------------------------------