@@ -35,8 +35,6 @@ static int	com_initialized = 0;
 
 extern "C" int	zbx_co_initialize()
 {
-	static int	initialized = 0;
-
 	if (0 == com_initialized)
 	{
 		HRESULT	hres;
