@@ -39,15 +39,9 @@
 #	include "daemon.h"
 #endif
 
-#ifdef _WINDOWS
-__declspec(thread) static ZBX_ACTIVE_METRIC	*active_metrics = NULL;
-__declspec(thread) static ZBX_ACTIVE_BUFFER	buffer;
-__declspec(thread) static zbx_vector_ptr_t	regexps;
-#else
-static ZBX_ACTIVE_METRIC	*active_metrics = NULL;
-static ZBX_ACTIVE_BUFFER	buffer;
-static zbx_vector_ptr_t		regexps;
-#endif
+ZBX_THREAD_LOCAL static ZBX_ACTIVE_METRIC	*active_metrics = NULL;
+ZBX_THREAD_LOCAL static ZBX_ACTIVE_BUFFER	buffer;
+ZBX_THREAD_LOCAL static zbx_vector_ptr_t	regexps;
 
 #ifdef _WINDOWS
 LONG WINAPI	DelayLoadDllExceptionFilter(PEXCEPTION_POINTERS excpointers)
@@ -415,11 +409,13 @@ json_error:
 static int	refresh_active_checks(const char *host, unsigned short port)
 {
 	const char	*__function_name = "refresh_active_checks";
-	zbx_sock_t	s;
-	char		*buf;
-	int		ret;
-	struct zbx_json	json;
-	static int	last_ret = SUCCEED;
+
+	ZBX_THREAD_LOCAL static int	last_ret = SUCCEED;
+
+	zbx_sock_t			s;
+	char				*buf;
+	int				ret;
+	struct zbx_json			json;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() host:'%s' port:%hu", __function_name, host, port);
 
@@ -1151,6 +1147,8 @@ static void	process_active_checks(char *server, unsigned short port)
 								/* buffer is full, stop processing active checks*/
 								/* till the buffer is cleared */
 								lastlogsize = active_metrics[i].lastlogsize;
+								finalize_eventlog6(&eventlog6_render_context,
+										&eventlog6_query);
 								goto ret;
 							}
 
