@@ -5,7 +5,9 @@ A.......S. [ZBX-8473] improved performance of deleting triggers by API and serve
 A.F....... [ZBX-1357] updated Polish and Spanish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
-.......PS. [ZBX-7621] the discovered virtual machine disk and network items will now use device name instead of instance id in item name (wiper)
+...G...... [ZBX-8236] fixed few memory leaks in Windows agent (wiper)
+A......... [ZBX-8563] added field "logtimefmt" to exported items (Krists)
+.......PS. [ZBX-7621] changed virtual machine disk and network discovery to use device name instead of instance id in discovered item name (wiper)
 .......PS. [ZBX-8338] fixed SNMP walking code so that it intelligently chooses either a string or numeric representation for an OID index (asaveljevs)
 ..F....... [ZBX-8577] added wmi.get[] to the list of suggested items (asaveljevs)
 ..F....... [ZBX-8216] fixed screen import error (Andrejs)
